--- a/admin-frontend/src/index.css
+++ b/admin-frontend/src/index.css
@@ -31,6 +31,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: left;
 }
 
 button {
@@ -54,6 +55,30 @@ button:focus-visible {
 button:active {
   outline: 1px solid #646cff;
   border-color: #646cff;
+}
+
+button#alt {
+  color: black;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: rgb(199, 199, 199);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button#alt:hover {
+  border-color: #000000;
+}
+button#alt:focus,
+button#alt:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+button#alt:active {
+  outline: 1px solid #000000;
+  border-color: #000000;
 }
 
 form {
